# ICG

./: CMakeCache.txt~  CMakeLists.txt  CMakeLists.txt~  README.md  build_glm.cmake
src/: main.cpp  main.h  readme
src/Bresenham/: Vertex.cpp  Vertex.cpp~  Vertex.h  definitions.cpp  definitions.h  mygl.cpp  mygl.cpp~  mygl.h
src/Pipeline/: Pipeline.cpp  Pipeline.cpp~  Pipeline.h  Pipeline.h~
